@@ -1,14 +1,12 @@
 package com.example.demo.alarm.dto;
 
 
-import com.example.demo.account.entity.Account;
 import com.example.demo.alarm.entity.Alarm;
 import lombok.Builder;
 import lombok.Getter;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Builder
 @Getter
@@ -23,12 +21,15 @@ public class AlarmDto {
     String description;
 
     public static List<AlarmDto> toDtoList(List<Alarm> alarmList) {
-        return alarmList.stream().map(alarm -> AlarmDto.builder()
+        return alarmList.stream().map(alarm ->
+                AlarmDto.builder()
                 .alarmId(alarm.getAlarmId())
                 .name(alarm.getAccount().getName())
                 .description(alarm.getDescription())
-                .createdAt(alarm.getCreatedAt())
+                .type(alarm.getType())
+                .importance(alarm.getImportance())
+                .createdAt(LocalDateTime.now())
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
     }
 }
